# RithmicTickDataCollection

./: .env.paper_chicago.yaml  .gitignore  CMakeLists.txt  main.cpp
cmake/: CheckChronoTzdb.cmake  FindRithmic.cmake  gcc-toolset.cmake
include/: ClickhouseUtils.hpp  Constants.hpp  Rithmic.hpp  Series.hpp  SpscRingBuffer.hpp  TradeUploader.hpp  Utils.hpp
src/: Rithmic.cpp  TradeUploader.cpp  Utils.cpp
